tests/kulezi_tests/bad/declaration_in_else.lat
int main() {
    if (true)
        {}
    else
        int y = 1;
    return 0;
}